Corrected image oversize on smaller screens.

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -198,6 +198,7 @@ div#pollButtonContainer {
 }
 
 .legendImg {
+	width: 99%;
 	max-width: 400px;
 }
 
